# DBus-Permission-Manager

./: .gitignore  CMakeLists.txt  README.md  compile-release.sh  conanfile.txt
app/: CMakeLists.txt
app/src/: main.cpp
permissions/: CMakeLists.txt
permissions/client/: CMakeLists.txt
permissions/client/include/: permission_client.h  test.h
permissions/client/src/: main.cpp  permission_client.cpp
permissions/client_lib/: CMakeLists.txt
permissions/client_lib/include/: permission_client.h
permissions/client_lib/src/: permission_client.cpp
permissions/general/: CMakeLists.txt
permissions/general/include/: permission.h
permissions/general_lib/: CMakeLists.txt
permissions/general_lib/include/: permission.h
permissions/general_lib/src/: permission.cpp
permissions/server/: CMakeLists.txt
permissions/server/config/: db_config.h.in
permissions/server/include/: permission_server.h
permissions/server/src/: db.cpp  db.h  main.cpp  permission_server.cpp  permission_server.h
permissions/src/: main.cpp  test.cpp
time/: CMakeLists.txt
time/client/: CMakeLists.txt
time/client/src/: main.cpp
time/client_lib/: CMakeLists.txt
time/client_lib/include/: time_client.h
time/client_lib/src/: time_client.cpp
time/general_lib/: CMakeLists.txt
time/general_lib/include/: mytime.h
time/general_lib/src/: mytime.cpp
time/server/: CMakeLists.txt
time/server/include/: time_server.h
time/server/src/: main.cpp  time_server.cpp  time_server.h
utils/: CMakeLists.txt
utils/include/: utils.h
utils/src/: utils.cpp
utils_lib/include/: utils.h
utils_lib/src/: utils.cpp
